--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="slide_title"><h2>Take control of your data</h2></div>
             <div class="slide_intro_buttons">
                 <a href="#">Get started</a>
-                <a href="#">explore features</a>
+                <a href="#" id="explore_features_btn">explore features</a>
             </div>
         </div>
         <footer class="footer">
@@ -127,7 +127,7 @@
                 <hr id="footer_hr">
             </div>
             <div class="footer_undertitle" id="link_to_footer">
-                <div class="site_information">© 2017 Mass Impressions & Tranmautritam. Make the right impression.</div>
+                <div class="site_information"><p>© 2017 Mass Impressions & Tranmautritam. Make the right impression.</p></div>
                 <div class="contacts">
                     <a href="https://ru-ru.facebook.com" target="_blank"><img src="img/png/facebook.png" alt=""></a>
                     <a href="https://twitter.com/?lang=ru" target="_blank"><img src="img/png/twitter.png" alt=""></a>
